--- a/quiz-app-build/index.html
+++ b/quiz-app-build/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Quiz App</title>
-  <base href="/">
+  <base href="/quiz-app-ng-cert/quiz-app-build/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
